--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  padding:10px;
+  justify-content:space-between;
+  align-items:center;
 }
 
 .logo {
@@ -9,11 +14,17 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  /*flex-grow:2;*/
+  /*text-align:center;*/
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  justify-content:center;
+  gap:8px;
+  padding:0;
 }
 
 a {
