--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -4,6 +4,8 @@ html, body {
   height: 100%;
 }
 
+.header{font-weight: bold;font-size:1.2em;;}
+
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
@@ -20,7 +22,12 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding:20px;
+  display:flex;
+  gap:20px;
 }
+
+.middle{display:flex;flex-wrap:wrap;gap:10px;}
 
 .icon {
   color: royalblue;
@@ -33,6 +40,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex:1 0 auto;
+  
 }
 
 .close-button {
@@ -46,6 +55,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left:auto;
 }
 
 button {
