--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex;flex-direction: column;
 }
 
 img {
@@ -25,3 +26,17 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+.content{display:flex;flex-direction:column;align-items: center;gap:10px;}
+
+.header{display:flex;padding:2px 10px;justify-content:space-between}
+
+ul{list-style:none;}
+
+.footer{display:flex;background-color:#eeeeee;padding:2px 10px;margin-top:auto;}
+
+.right-links{display:flex;gap:15px;margin-left:auto;}
+.left-links{display:flex;gap:15px;padding:0px}
+
+.buttons>button{padding:10px;}
+
+a{text-decoration:none;color:#726666}
